--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/.vs/config/applicationhost.config
+/.vs/testApi/v14/.suo
+/.vs/restore.dg
